--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,13 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    style="
+      background: #fbd3e9;
+      background: -webkit-linear-gradient(to right, #bb377d, #fbd3e9);
+      background: linear-gradient(to right, #bb377d, #fbd3e9);
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
